# investing-knowledge-base

./: .gitignore  .remote-bootstrap  AGENTS.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.obsidian/: app.json  appearance.json  core-plugins.json
config/: knowledge-coverage.yaml
configs/: markets.yaml  providers.yaml  validation.yaml
docs/: INDEX.md
notebooks/: 01_认识收益与风险.ipynb  02_获取并检查行情.ipynb  03_第一个无未来函数回测.ipynb  README.md
output/: README.md
raw/: README.md  source-catalog.md
scripts/: snapshot_reference_repo.sh  verify.sh
site/: 404.md  graph.md  index.md  tools.md
tests/: __init__.py  test_advanced_foundations.py  test_assets.py  test_cli.py  test_company_research.py  test_coverage.py  test_education.py  test_final_engineering_systems.py  test_finance_skill_audit.py  test_foundations_curriculum.py  test_frozen_sector_cases.py  test_github_workflows.py  test_global_markets_assets_expansion.py  test_global_scope.py  test_health_internet_memory.py  test_investing_research_plugin.py  test_knowledge_skill.py  test_market_calendar.py  test_market_operations.py  test_metrics.py  test_notebooks.py  test_package.py  test_portfolio_lab.py  test_private_research.py  test_public_boundary.py  test_public_evidence_cases.py  test_raw_collection.py  test_reporting.py  test_repository_docs.py  test_research_methods.py  test_sector_research_packs.py  test_sectors.py  test_site.py  test_sources.py  test_strategies.py  test_wiki.py
wiki/: dashboard.md  (+3 more)
(+418 files in other folders)
