[project]
name = "investkb"
version = "0.1.0"
description = "Obsidian-friendly global investing knowledge base with reproducible research"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "matplotlib>=3.9",
  "numpy>=2",
  "pandas>=2.2",
  "pyarrow>=17",
  "pydantic>=2.8",
  "pyyaml>=6",
  "typer>=0.12",
]

[project.optional-dependencies]
data = ["akshare>=1.17", "baostock>=0.8.9"]
dev = ["pytest>=8", "pytest-cov>=5", "ruff>=0.6"]
site = ["mkdocs-material>=9,<10"]

[project.scripts]
investkb = "investkb.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["network: tests requiring live external data providers"]

[tool.ruff]
line-length = 100
target-version = "py311"
